# 42-linear-regression

./: Cargo.toml  README.md  thetas.csv  wow.py
data/: data.csv  test.csv  theta.ini
src/predict/: main.rs  utils.rs
src/show/: draw_chart.rs  main.rs
src/test/: draw_charts.rs  main.rs
src/train/: draw_charts.rs  main.rs  vmain.rs
